add empty test data & docs

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: "/"
 collections:
     comics:
         output: true
-        permalink: /:title/
+        permalink: /comics/:title/
     pages:
         output: true
         permalink: /:title/
