random assorted comic page-related changes

--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ baseurl: "/"
 collections:
     comics:
         output: true
-        permalink: /comics/:title/
+        permalink: comics/:slug/
     pages:
         output: true
-        permalink: /:title/
+        permalink: :slug/
 
 exclude:
   - Gemfile
