update config url

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: The Newspanels
 description: Pravin's Webcomic
-url: https://jfenn.me/webcomic_test
+url: https://thenewspanel.com/
 baseurl: "/"
 
 collections:
