add an a to the domain

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: The Newspanels
 description: Pravin's Webcomic
-url: https://thenewspanel.com/
+url: https://thenewspanels.com
 baseurl: "/"
 
 collections:
