update config file

--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ baseurl: "/"
 collections:
     comics:
         output: true
-        permalink: comics/:slug/
+        permalink: comics/:name/
     pages:
         output: true
-        permalink: :slug/
+        permalink: :name/
 
 positions:
   - - rowStart: 1
