--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -1,27 +1,25 @@
 ---
 new_page_extension: md
-auto_deploy: false
-admin_path: 
+auto_deploy: true
+admin_path: ''
 webhook_url: 
 sections:
-- type: jekyll-pages
-  label: Pages
-  create: all
-- type: jekyll-posts
-  label: Posts
-  create: all
 - type: directory
   path: _pages
   label: Pages
   create: all
   match: "**/*"
+  templates:
+  - page
 - type: directory
   path: _comics
   label: Comics
   create: all
   match: "**/*"
-upload_dir: uploads
-public_path: "/uploads"
+  templates:
+  - comic
+upload_dir: images/comics
+public_path: "/images/comics"
 front_matter_path: ''
 use_front_matter_path: false
 file_template: ":filename:"
