--- a/.forestry/front_matter/templates/comic.yml
+++ b/.forestry/front_matter/templates/comic.yml
@@ -19,10 +19,6 @@ fields:
   config:
     required: true
   default: Untitled Comic
-- type: image_gallery
-  name: images
-  label: Comic Panels
-  description: The images to display as panels in the comic.
 - type: text
   name: slug
   label: Comic Number
@@ -39,6 +35,17 @@ fields:
   config:
     required: true
   default: '000001'
+- type: image_gallery
+  name: images
+  label: Comic Panels
+  description: The images to display as panels in the comic.
 pages:
+- _comics/1.md
+- _comics/2.md
 - _comics/3.md
+- _comics/4.md
+- _comics/5.md
+- _comics/6.md
+- _comics/7.md
+- _comics/8.md
 - _comics/9.md
