--- a/.forestry/settings.yml
+++ b/.forestry/settings.yml
@@ -22,7 +22,7 @@ upload_dir: images/comics
 public_path: "/images/comics"
 front_matter_path: ''
 use_front_matter_path: false
-file_template: ":filename:"
+file_template: ":year:/:month:/:day:/:filename:"
 build:
   preview_command: bundle exec jekyll build -d _site
   publish_command: bundle exec jekyll build -d _site
