add manifest / config options

--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,9 @@ baseurl: "https://thenewspanels.com"
 domainurl: "https://thenewspanels.com"
 baseurl: "/"
 
+source: "."
+destination: "../webcomic-deploy/"
+
 collections:
     comics:
         output: true
