--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,10 @@ permalink: /manifest.json
         "src": "/images/favicon-192.png",
         "sizes": "192x192",
         "type": "image/png"
+      }, {
+        "src": "/images/icon-512.png",
+        "sizes": "512x512",
+        "type": "image/png"
       }],
   "start_url": "/",
   "background_color": "#FFFFFF",
